--- a/Loginator/NLog.config
+++ b/Loginator/NLog.config
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" throwExceptions="true">
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xsi:schemaLocation="NLog NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true"
+      internalLogFile="c:\temp\loginator-internal.log"
+      internalLogLevel="Info"
+      throwExceptions="true">
 
   <targets>
     <target xsi:type="Debugger" name="debugger" layout="${date:format=HH\:mm\:ss} | ${logger} | ${level} | ${message} | ${exception:format=ToString}"/>
 
     <target xsi:type="File"
             name="file"
-            openFileCacheSize="20"
             fileName="${basedir}/Logs/log.txt"
             archiveFileName="${basedir}/Logs/log.{##}.txt"
             layout="${date:format=yyyy-MM-dd HH\:mm\:ss\:fff} | ${logger} | ${level} | ${message} | ${exception:format=ToString}"
+            openFileCacheSize="20"
             archiveAboveSize="1048576"
             maxArchiveFiles="10"
             archiveNumbering="Sequence"
