Change NLog internal logging path to %appdata%

--- a/Loginator/NLog.config
+++ b/Loginator/NLog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xsi:schemaLocation="NLog NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogFile="c:\temp\loginator-internal.log"
+      internalLogFile="%appdata%\Loginator\loginator-internal.log"
       internalLogLevel="Info"
       throwExceptions="true">
 
