Refactor LoginatorViewModel to ObservableObject (<- INotifyPropertyChanged)

--- a/Loginator/Loginator.csproj
+++ b/Loginator/Loginator.csproj
@@ -23,4 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).UnitTests" />
+  </ItemGroup>
 </Project>
