--- a/Loginator/Loginator.csproj
+++ b/Loginator/Loginator.csproj
@@ -6,10 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Version.txt" />
+    <EmbeddedResource Include="Resources\Version.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="icon.ico" />
+    <Resource Include="Resources\icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Config\appsettings.json">
