--- a/Loginator/Config/NLog.Development.config
+++ b/Loginator/Config/NLog.Development.config
@@ -3,16 +3,16 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogFile="%appdata%/Loginator/nlog.log"
-      internalLogLevel="Warn"
-      throwExceptions="false">
+      internalLogLevel="Debug"
+      throwExceptions="true">
 
   <targets>
     <target xsi:type="Debugger" name="debugger" layout="${date:format=HH\:mm\:ss} | ${logger} | ${level} | ${message} | ${exception:format=ToString}"/>
 
     <target xsi:type="File"
             name="file"
-            fileName="${specialfolder:folder=ApplicationData}/Loginator/loginator.log"
-            archiveFileName="${specialfolder:folder=ApplicationData}/Loginator/loginator.{##}.log"
+            fileName="${basedir}../../../../Logs/loginator.log"
+            archiveFileName="${basedir}/../../../../Logs/loginator.{##}.log"
             header="************************************************ Loginator ${processid} ************************************************"
             writeHeaderWhenInitialFileNotEmpty="true"
             layout="${date:format=yyyy-MM-dd HH\:mm\:ss\:fff} | ${level:padding=-5} | ${threadid:padding=2} | ${logger} | ${message} | ${exception:format=ToString}"
