--- a/Loginator/Loginator.csproj
+++ b/Loginator/Loginator.csproj
@@ -24,6 +24,10 @@
     <None Update="Config\NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Config\NLog.Development.config">
+      <DependentUpon>Config\NLog.config</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
