--- a/Loginator/Properties/launchSettings.json
+++ b/Loginator/Properties/launchSettings.json
@@ -1,10 +1,17 @@
 {
     "profiles": {
-        "Loginator": {
+        "Loginator Dev": {
             "commandName": "Project",
             "dotnetRunMessages": true,
             "environmentVariables": {
                 "DOTNET_ENVIRONMENT": "Development"
+            }
+        },
+        "Loginator Prod": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "environmentVariables": {
+                "DOTNET_ENVIRONMENT": "Production"
             }
         }
     }
