--- a/Loginator/Loginator.csproj
+++ b/Loginator/Loginator.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
+    <Platforms>AnyCPU;x64;x86</Platforms>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
   </PropertyGroup>
