Add ViewModelToLogConverter to use LogViewModel only for selected logs and make it read only, remove AutoMapper

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="Loginator.UnitTests" />
+  </ItemGroup>
 </Project>
