Add option to allow consolidated (across processes) or unchanged application names, refactor ConfigurationViewModel

--- a/Loginator/Config/appsettings.json
+++ b/Loginator/Config/appsettings.json
@@ -13,6 +13,7 @@
         "LogType": "Chainsaw",
         "PortChainsaw": 7071,
         "PortLogcat": 7081,
-        "LogTimeFormat": "ConvertToLocalTime"
+        "LogTimeFormat": "ConvertToLocalTime",
+        "ApplicationFormat": "DoNotChange"
     }
 }
